ferdig for i dag

--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -4,7 +4,7 @@
 Jeg kopierte tabellen inn i et program så fikk jeg en ferdiglaget sql spørring. Jeg kunne deretter redigere den litt for å få den til å passe min spesefike bruk. https://tableconvert.com/ <-- veldig prakrisk
 ## oppgave 2
 ### a
-SELECT * FROM `elev` WHERE `Kjonn` = 'j'
+```SELECT * FROM `elev` WHERE `Kjonn` = 'j'```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
 |--------|---------|-----------|--------|-----------|-------|
 |      2 | Linn    | Jensen    |      2 | Gaming    | J     |
@@ -13,12 +13,53 @@ SELECT * FROM `elev` WHERE `Kjonn` = 'j'
 |      8 | Jenny   | Gullaug   |      4 | Band      | J     |
 |     10 | Hanna   | Ullevik   |      4 | Fotball   | J     |
 ### b
-SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'
+```SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
 |--------|---------|-----------|--------|-----------|-------|
 |      5 | Martin  | Hjelle    |      2 | Strikking | G     |
 |      9 | Bjarte  | Ås        |      2 | Band      | G     |
 ### c
-SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';
+```SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';```
 2 jenter er i 2.
 ### d
+```SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';```
+| ElevID | Fornavn | Etternavn  | Klasse | Hobby  | Kjonn |
+|--------|---------|------------|--------|--------|-------|
+|      7 | Joakim  | Fredriksen |      1 | Løping | G     |
+|      8 | Jenny   | Gullaug    |      4 | Band   | J     |
+### e
+```SELECT * FROM `elev` WHERE `Fornavn` LIKE 'M%' AND `Klasse` = '2';```
+| ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
+|--------|---------|-----------|--------|-----------|-------|
+|      5 | Martin  | Hjelle    |      2 | Strikking | G     |
+### f
+```SELECT * FROM `elev` WHERE `Hobby` = 'fotball';```
+| ElevID | Fornavn | Etternavn | Klasse | Hobby   | Kjonn |
+|--------|---------|-----------|--------|---------|-------|
+|      1 | Thomas  | Hansen    |      1 | Fotball | G     |
+|     10 | Hanna   | Ullevik   |      4 | Fotball | J     |
+## oppgave 3
+ferdig
+| data id | årsmodel | brand |
+|---------|----------|-------|
+|       1 |     2001 | HP    |
+|       2 |     1989 | DELL  |
+|       3 |        0 | stein |
+## oppgave 4
+ferdig...
+| ElevID | Fornavn | Etternavn  | programfag | Hobby     | Kjonn | data |
+|--------|---------|------------|------------|-----------|-------|------|
+|      1 | Thomas  | Hansen     |          1 | Fotball   | G     |    1 |
+|      2 | Linn    | Jensen     |          2 | Gaming    | J     |    3 |
+|      3 | Lise    | Olsen      |          1 | Strikking | J     |    3 |
+|      4 | Eva     | Yttergård  |          2 | Gaming    | J     |    3 |
+|      5 | Martin  | Hjelle     |          2 | Strikking | G     |    2 |
+|      6 | Bjarne  | Utvik      |          3 | Håndball  | G     |    1 |
+|      7 | Joakim  | Fredriksen |          1 | Løping    | G     |    2 |
+|      8 | Jenny   | Gullaug    |          4 | Band      | J     |    2 |
+|      9 | Bjarte  | Ås         |          2 | Band      | G     |    1 |
+|     10 | Hanna   | Ullevik    |          4 | Fotball   | J     |    2 |
+## oppgave 5
+```ALTER TABLE `elev` ADD CONSTRAINT `kobling data` FOREIGN KEY (`data`) REFERENCES `data`(`data id`) ON DELETE RESTRICT ON UPDATE RESTRICT;```
+vi bruker constraints fordi det gjør sammenkoblingene mer effektive og gjør slik at vi får tak i dataen som man trenger med færre problemer og raskere.
+## oppgave 6
