--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -4,7 +4,9 @@
 Jeg kopierte tabellen inn i et program så fikk jeg en ferdiglaget sql spørring. Jeg kunne deretter redigere den litt for å få den til å passe min spesefike bruk. https://tableconvert.com/ <-- veldig prakrisk
 ## oppgave 2
 ### a
-```SELECT * FROM `elev` WHERE `Kjonn` = 'j'```
+```sql
+SELECT * FROM `elev` WHERE `Kjonn` = 'j'
+```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
 |--------|---------|-----------|--------|-----------|-------|
 |      2 | Linn    | Jensen    |      2 | Gaming    | J     |
@@ -13,13 +15,17 @@ Jeg kopierte tabellen inn i et program så fikk jeg en ferdiglaget sql spørring
 |      8 | Jenny   | Gullaug   |      4 | Band      | J     |
 |     10 | Hanna   | Ullevik   |      4 | Fotball   | J     |
 ### b
-```SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'```
+```sql
+SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'
+```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
 |--------|---------|-----------|--------|-----------|-------|
 |      5 | Martin  | Hjelle    |      2 | Strikking | G     |
 |      9 | Bjarte  | Ås        |      2 | Band      | G     |
 ### c
-```SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';```
+```sql
+SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';
+```
 2 jenter er i 2.
 ### d
 ```SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';```
@@ -28,7 +34,9 @@ Jeg kopierte tabellen inn i et program så fikk jeg en ferdiglaget sql spørring
 |      7 | Joakim  | Fredriksen |      1 | Løping | G     |
 |      8 | Jenny   | Gullaug    |      4 | Band   | J     |
 ### e
-```SELECT * FROM `elev` WHERE `Fornavn` LIKE 'M%' AND `Klasse` = '2';```
+```sql
+SELECT * FROM `elev` WHERE `Fornavn` LIKE 'M%' AND `Klasse` = '2';
+```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby     | Kjonn |
 |--------|---------|-----------|--------|-----------|-------|
 |      5 | Martin  | Hjelle    |      2 | Strikking | G     |
@@ -60,6 +68,17 @@ ferdig...
 |      9 | Bjarte  | Ås         |          2 | Band      | G     |    1 |
 |     10 | Hanna   | Ullevik    |          4 | Fotball   | J     |    2 |
 ## oppgave 5
-```ALTER TABLE `elev` ADD CONSTRAINT `kobling data` FOREIGN KEY (`data`) REFERENCES `data`(`data id`) ON DELETE RESTRICT ON UPDATE RESTRICT;```
+```sql
+ALTER TABLE `elev` ADD CONSTRAINT `kobling data` FOREIGN KEY (`data`) REFERENCES `data`(`data id`) ON DELETE RESTRICT ON UPDATE RESTRICT;
+```
 vi bruker constraints fordi det gjør sammenkoblingene mer effektive og gjør slik at vi får tak i dataen som man trenger med færre problemer og raskere.
 ## oppgave 6
+´´´sql
+SELECT data.arsmodel, data.brand, elev.Fornavn, elev.Etternavn, elev.ElevID FROM elev
+INNER JOIN data
+ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
+´´´
+| ElevID | Fornavn | Etternavn | arsmodel | brand |
+|--------|---------|-----------|----------|-------|
+|      5 | Martin  | Hjelle    |     1989 | DELL  |
+|     10 | Hanna   | Ullevik   |     1989 | DELL  |
