--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -28,7 +28,9 @@ SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';
 ```
 2 jenter er i 2.
 ### d
-```SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';```
+```sql
+SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';
+```
 | ElevID | Fornavn | Etternavn  | Klasse | Hobby  | Kjonn |
 |--------|---------|------------|--------|--------|-------|
 |      7 | Joakim  | Fredriksen |      1 | Løping | G     |
@@ -41,7 +43,9 @@ SELECT * FROM `elev` WHERE `Fornavn` LIKE 'M%' AND `Klasse` = '2';
 |--------|---------|-----------|--------|-----------|-------|
 |      5 | Martin  | Hjelle    |      2 | Strikking | G     |
 ### f
-```SELECT * FROM `elev` WHERE `Hobby` = 'fotball';```
+```sql
+SELECT * FROM `elev` WHERE `Hobby` = 'fotball';
+```
 | ElevID | Fornavn | Etternavn | Klasse | Hobby   | Kjonn |
 |--------|---------|-----------|--------|---------|-------|
 |      1 | Thomas  | Hansen    |      1 | Fotball | G     |
@@ -74,9 +78,7 @@ ALTER TABLE `elev` ADD CONSTRAINT `kobling data` FOREIGN KEY (`data`) REFERENCES
 vi bruker constraints fordi det gjør sammenkoblingene mer effektive og gjør slik at vi får tak i dataen som man trenger med færre problemer og raskere.
 ## oppgave 6
 ´´´sql
-SELECT data.arsmodel, data.brand, elev.Fornavn, elev.Etternavn, elev.ElevID FROM elev
-INNER JOIN data
-ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
+SELECT data.arsmodel, data.brand, elev.Fornavn, elev.Etternavn, elev.ElevID FROM elev INNER JOIN data ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
 ´´´
 | ElevID | Fornavn | Etternavn | arsmodel | brand |
 |--------|---------|-----------|----------|-------|
