fikset flau feil

--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -77,9 +77,11 @@ ALTER TABLE `elev` ADD CONSTRAINT `kobling data` FOREIGN KEY (`data`) REFERENCES
 ```
 vi bruker constraints fordi det gjør sammenkoblingene mer effektive og gjør slik at vi får tak i dataen som man trenger med færre problemer og raskere.
 ## oppgave 6
-´´´sql
-SELECT data.arsmodel, data.brand, elev.Fornavn, elev.Etternavn, elev.ElevID FROM elev INNER JOIN data ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
-´´´
+```sql
+SELECT data.arsmodel, data.brand, elev.Fornavn, elev.Etternavn, elev.ElevID FROM elev
+INNER JOIN data
+ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
+```
 | ElevID | Fornavn | Etternavn | arsmodel | brand |
 |--------|---------|-----------|----------|-------|
 |      5 | Martin  | Hjelle    |     1989 | DELL  |
