vil ha god tid på siste

--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -86,3 +86,50 @@ ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
 |--------|---------|-----------|----------|-------|
 |      5 | Martin  | Hjelle    |     1989 | DELL  |
 |     10 | Hanna   | Ullevik   |     1989 | DELL  |
+## oppgave 7
+```sql
+SELECT * FROM elev ORDER BY Fornavn
+```
+| ElevID | Fornavn # 1 | Etternavn  | programfag | Hobby     | Kjonn | data |
+|--------|-------------|------------|------------|-----------|-------|------|
+|      6 | Bjarne      | Utvik      |          3 | Håndball  | G     |    1 |
+|      9 | Bjarte      | Ås         |          2 | Band      | G     |    1 |
+|      4 | Eva         | Yttergård  |          2 | Gaming    | J     |    3 |
+|     10 | Hanna       | Ullevik    |          4 | Fotball   | J     |    2 |
+|      8 | Jenny       | Gullaug    |          4 | Band      | J     |    2 |
+|      7 | Joakim      | Fredriksen |          1 | Løping    | G     |    2 |
+|      2 | Linn        | Jensen     |          2 | Gaming    | J     |    3 |
+|      3 | Lise        | Olsen      |          1 | Strikking | J     |    3 |
+|      5 | Martin      | Hjelle     |          2 | Strikking | G     |    2 |
+|      1 | Thomas      | Hansen     |          1 | Fotball   | G     |    1 |
+## oppgave 8
+```sql
+SELECT programfag, COUNT(programfag) FROM elev GROUP BY programfag HAVING COUNT(programfag) > 1 ORDER BY 'programfag';
+```
+| programfag | COUNT(programfag) |
+|------------|-------------------|
+|          1 |                 3 |
+|          2 |                 4 |
+|          4 |                 2 |
+## oppgave 9
+```sql
+UPDATE `elev` SET `Hobby`='updates i sql' WHERE `ElevID` = 7;
+```
+| ElevID | Fornavn | Etternavn  | programfag | Hobby         | Kjonn | data |
+|--------|---------|------------|------------|---------------|-------|------|
+|      7 | Joakim  | Fredriksen |          1 | updates i sql | G     |    2 |
+## oppgave 10
+```sql
+INSERT INTO elev (ElevID, Fornavn, Etternavn, programfag, Hobby, Kjonn, data) VALUES (NULL, 'råger', 'halama', '2', 'male med rødt', 'g', '3')
+```
+| ElevID | Fornavn | Etternavn | programfag | Hobby         | Kjonn | data |
+|--------|---------|-----------|------------|---------------|-------|------|
+|     11 | råger   | halama    |          2 | male med rødt | g     |    3 |
+## oppgave 11
+```sql
+DELETE FROM `elev` WHERE ElevID = 11;
+```
+https://youtu.be/ulakMBcqyPo
+| ElevID | Fornavn | Etternavn | programfag | Hobby | Kjonn | data |
+|--------|---------|-----------|------------|-------|-------|------|
+ok jeg vet at den tabelen var ubrukelig men ja jeg ville
