ville bli ferdig så jeg ble

--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -132,4 +132,57 @@ DELETE FROM `elev` WHERE ElevID = 11;
 https://youtu.be/ulakMBcqyPo
 | ElevID | Fornavn | Etternavn | programfag | Hobby | Kjonn | data |
 |--------|---------|-----------|------------|-------|-------|------|
+
 ok jeg vet at den tabelen var ubrukelig men ja jeg ville
+## oppgave 12
+For denne så brukte jeg en mix av "phpintro" oppgaven fra i fjord og "login3" (folder navn).
+
+Jeg brukte dette fra "phpintro" for å lage tabelen som jeg har på alle sidene. Som du ser så sjifta jeg den slik at den passa dette prosjektet
+```php
+$sql = "SELECT * FROM elev";
+$result = $conn->query($sql);
+
+if (mysqli_num_rows($result) > 0) {
+echo "<table border=1><th>ElevID</th><th>Navn</th><th>Programfag</th><th>Hobby</th><th>Kjønn</th><th>Data</th>";
+// output data of each row
+while($row = mysqli_fetch_assoc($result)) {
+    echo 
+    "<tr>" . "<td>" . 
+    $row["ElevID"]. 
+    "</td><td>" .
+    $row["Fornavn"]. " " . $row["Etternavn"]. 
+    "</td><td>" .
+    $row["programfag"]. 
+    "</td><td>" .
+    $row["Hobby"]. 
+    "</td><td>" .
+    $row["Kjonn"]. 
+    "</td><td>" .
+    $row["data"] . 
+    "</td>" . "</tr>";
+}else {
+echo "0 results";
+}
+echo "</table>";
+}
+```
+Deretter lagde jeg en form jeg kunne endre til hva jeg trenger den til.
+```php
+<h2>funksjon</h2>
+<form action="funksjon.php" method="post">
+
+<label for="ID">ElevID:</label>
+<input type="number" name="ID" id="ID" maxlength="10"><br><br>
+
+<input type="submit" value="Submit">
+</form>
+```
+På den neste siden brukte jeg tabelen som du så tiligere. Jeg henta dataen fra tabelen på forje side med denne linjen jeg endra den for de andre tingene jeg henta fra formen.
+```php
+$ID =  $_REQUEST['ID'];
+```
+Deretter tok jeg å sente en SQL Querry.
+```php
+$sql = "HVA `elev` GJØR `tabel`='$ID' WHERE `ElevID` = '$ID'";
+```
+om den klarte å sende Querryen ville den vist en tabel med den optaterte infoen. Hvis den ikke klarer å sende daten vil den vise erroren den fikk fra MySQL.
