--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -135,9 +135,14 @@ https://youtu.be/ulakMBcqyPo
 
 ok jeg vet at den tabelen var ubrukelig men ja jeg ville
 ## oppgave 12
-For denne så brukte jeg en mix av "phpintro" oppgaven fra i fjord og "login3" (folder navn).
+For denne så brukte jeg en mix av "phpintro" oppgaven fra i fjord og "login3" (mappe navn).
 
-Jeg brukte dette fra "phpintro" for å lage tabelen som jeg har på alle sidene. Som du ser så sjifta jeg den slik at den passa dette prosjektet
+jeg putta dett i starten av <php i alle dokumentene som koblet seg til databasen. her valgte jeg å ikke bruke variabler som vi gjorde i fjord men bare skrive direkte inn.
+```php
+$conn = mysqli_connect("localhost", "root", "", "dromtorp");
+```
+
+Jeg brukte dette fra "phpintro" for å lage tabelen som jeg har på alle sidene. Som du ser så endra jeg den slik at den passa dette prosjektet
 ```php
 $sql = "SELECT * FROM elev";
 $result = $conn->query($sql);
@@ -177,7 +182,7 @@ Deretter lagde jeg en form jeg kunne endre til hva jeg trenger den til.
 <input type="submit" value="Submit">
 </form>
 ```
-På den neste siden brukte jeg tabelen som du så tiligere. Jeg henta dataen fra tabelen på forje side med denne linjen jeg endra den for de andre tingene jeg henta fra formen.
+På den neste siden brukte jeg tabelen som du så tiligere. Jeg henta dataen fra tabelen på forje side med denne linjen jeg endra den for de andre tingene jeg henta fra formen. Dette var det jeg tokk fra "login3" oppgaven i fjord.
 ```php
 $ID =  $_REQUEST['ID'];
 ```
