--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -191,3 +191,6 @@ Deretter tok jeg å sente en SQL Querry.
 $sql = "HVA `elev` GJØR `tabel`='$ID' WHERE `ElevID` = '$ID'";
 ```
 om den klarte å sende Querryen ville den vist en tabel med den optaterte infoen. Hvis den ikke klarer å sende daten vil den vise erroren den fikk fra MySQL.
+
+du kan prøve den her (kan hende at den ikke er permanent)
+https://test.binders.net/skole/SQLshit/
