--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -14,6 +14,8 @@ SELECT * FROM `elev` WHERE `Kjonn` = 'j'
 |      4 | Eva     | Yttergård |      2 | Gaming    | J     |
 |      8 | Jenny   | Gullaug   |      4 | Band      | J     |
 |     10 | Hanna   | Ullevik   |      4 | Fotball   | J     |
+
+ved å bruke Where så leter den etter steder hvor den kan finne den samme verdien.
 ### b
 ```sql
 SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'
@@ -22,11 +24,13 @@ SELECT * FROM `elev` WHERE `Kjonn` = 'g' AND `Klasse` = '2'
 |--------|---------|-----------|--------|-----------|-------|
 |      5 | Martin  | Hjelle    |      2 | Strikking | G     |
 |      9 | Bjarte  | Ås        |      2 | Band      | G     |
+
+Man kan bruke AND for å ha flere variabler
 ### c
 ```sql
 SELECT * FROM `elev` WHERE `Kjonn` = 'j' AND `Klasse` = '2';
 ```
-2 jenter er i 2.
+2 jenter er i 2 klasse.
 ### d
 ```sql
 SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';
@@ -35,6 +39,8 @@ SELECT * FROM `elev` WHERE `Fornavn` LIKE 'J%';
 |--------|---------|------------|--------|--------|-------|
 |      7 | Joakim  | Fredriksen |      1 | Løping | G     |
 |      8 | Jenny   | Gullaug    |      4 | Band   | J     |
+
+Istedenfor å bruke = så bruker man like for å finne ting som er nerme til. vi bruker % til å symbolisere hva som helst
 ### e
 ```sql
 SELECT * FROM `elev` WHERE `Fornavn` LIKE 'M%' AND `Klasse` = '2';
@@ -57,6 +63,8 @@ ferdig
 |       1 |     2001 | HP    |
 |       2 |     1989 | DELL  |
 |       3 |        0 | stein |
+
+Her ser du hvordan jeg ville at oppsettet til data tablen blir
 ## oppgave 4
 ferdig...
 | ElevID | Fornavn | Etternavn  | programfag | Hobby     | Kjonn | data |
@@ -86,6 +94,8 @@ ON elev.data = data.dataid WHERE Fornavn IN ('Martin', 'Hanna');
 |--------|---------|-----------|----------|-------|
 |      5 | Martin  | Hjelle    |     1989 | DELL  |
 |     10 | Hanna   | Ullevik   |     1989 | DELL  |
+
+ved bruk av inner join så kan jeg  velge ting fra andre databaser og relatere det til denne.
 ## oppgave 7
 ```sql
 SELECT * FROM elev ORDER BY Fornavn
@@ -102,6 +112,8 @@ SELECT * FROM elev ORDER BY Fornavn
 |      3 | Lise        | Olsen      |          1 | Strikking | J     |    3 |
 |      5 | Martin      | Hjelle     |          2 | Strikking | G     |    2 |
 |      1 | Thomas      | Hansen     |          1 | Fotball   | G     |    1 |
+
+ved å bruke ORDER BY så kan jeg besteme hva den sorterer med
 ## oppgave 8
 ```sql
 SELECT programfag, COUNT(programfag) FROM elev GROUP BY programfag HAVING COUNT(programfag) > 1 ORDER BY 'programfag';
@@ -111,6 +123,8 @@ SELECT programfag, COUNT(programfag) FROM elev GROUP BY programfag HAVING COUNT(
 |          1 |                 3 |
 |          2 |                 4 |
 |          4 |                 2 |
+
+Her starter jeg men å velkge programfag og mengden programfag jeg gruperer svarene basert på programfag slik at jeg ikke bare får 10. Til slutt så sorterer jeg det etter programfag IDen
 ## oppgave 9
 ```sql
 UPDATE `elev` SET `Hobby`='updates i sql' WHERE `ElevID` = 7;
@@ -118,6 +132,8 @@ UPDATE `elev` SET `Hobby`='updates i sql' WHERE `ElevID` = 7;
 | ElevID | Fornavn | Etternavn  | programfag | Hobby         | Kjonn | data |
 |--------|---------|------------|------------|---------------|-------|------|
 |      7 | Joakim  | Fredriksen |          1 | updates i sql | G     |    2 |
+
+Jeg brukte UPDATE...
 ## oppgave 10
 ```sql
 INSERT INTO elev (ElevID, Fornavn, Etternavn, programfag, Hobby, Kjonn, data) VALUES (NULL, 'råger', 'halama', '2', 'male med rødt', 'g', '3')
@@ -125,6 +141,8 @@ INSERT INTO elev (ElevID, Fornavn, Etternavn, programfag, Hobby, Kjonn, data) VA
 | ElevID | Fornavn | Etternavn | programfag | Hobby         | Kjonn | data |
 |--------|---------|-----------|------------|---------------|-------|------|
 |     11 | råger   | halama    |          2 | male med rødt | g     |    3 |
+
+første steget men mindre...
 ## oppgave 11
 ```sql
 DELETE FROM `elev` WHERE ElevID = 11;
@@ -133,7 +151,10 @@ https://youtu.be/ulakMBcqyPo
 | ElevID | Fornavn | Etternavn | programfag | Hobby | Kjonn | data |
 |--------|---------|-----------|------------|-------|-------|------|
 
+
 ok jeg vet at den tabelen var ubrukelig men ja jeg ville
+
+nå maler vi med rød råger måtte dø
 ## oppgave 12
 For denne så brukte jeg en mix av "phpintro" oppgaven fra i fjord og "login3" (mappe navn).
 
@@ -144,32 +165,32 @@ $conn = mysqli_connect("localhost", "root", "", "dromtorp");
 
 Jeg brukte dette fra "phpintro" for å lage tabelen som jeg har på alle sidene. Som du ser så endra jeg den slik at den passa dette prosjektet
 ```php
-$sql = "SELECT * FROM elev";
+$sql = "SELECT elev.ElevID, elev.Fornavn, elev.Etternavn, elev.programfag, elev.Hobby, elev.Kjonn, data.brand, data.arsmodel FROM elev INNER JOIN data ON elev.data = data.dataid ORDER BY elev.ElevID ASC;";
 $result = $conn->query($sql);
 
 if (mysqli_num_rows($result) > 0) {
-echo "<table border=1><th>ElevID</th><th>Navn</th><th>Programfag</th><th>Hobby</th><th>Kjønn</th><th>Data</th>";
-// output data of each row
-while($row = mysqli_fetch_assoc($result)) {
-    echo 
-    "<tr>" . "<td>" . 
-    $row["ElevID"]. 
-    "</td><td>" .
-    $row["Fornavn"]. " " . $row["Etternavn"]. 
-    "</td><td>" .
-    $row["programfag"]. 
-    "</td><td>" .
-    $row["Hobby"]. 
-    "</td><td>" .
-    $row["Kjonn"]. 
-    "</td><td>" .
-    $row["data"] . 
-    "</td>" . "</tr>";
-}else {
-echo "0 results";
-}
-echo "</table>";
-}
+    echo "<table border=1><th>ElevID</th><th>Navn</th><th>Programfag</th><th>Hobby</th><th>Kjønn</th><th>Data</th>";
+    // output data of each row
+    while($row = mysqli_fetch_assoc($result)) {
+        echo 
+        "<tr>" . "<td>" . 
+        $row["ElevID"]. 
+        "</td><td>" .
+        $row["Fornavn"]. " " . $row["Etternavn"]. 
+        "</td><td>" .
+        $row["programfag"]. 
+        "</td><td>" .
+        $row["Hobby"]. 
+        "</td><td>" .
+        $row["Kjonn"]. 
+        "</td><td>" .
+        $row["brand"] . "  " . $row["arsmodel"] .
+        "</td>" . "</tr>";
+    }
+    echo "</table>";
+  } else {
+    echo "0 results";
+  }
 ```
 Deretter lagde jeg en form jeg kunne endre til hva jeg trenger den til.
 ```php
