--- a/databaser/26.08.22.md
+++ b/databaser/26.08.22.md
@@ -215,3 +215,28 @@ om den klarte å sende Querryen ville den vist en tabel med den optaterte infoen
 
 du kan prøve den her (kan hende at den ikke er permanent)
 https://test.binders.net/skole/SQLshit/
+## oppgave 12 node js
+```js
+var mysql = require('mysql');
+
+var con = mysql.createConnection({
+  host: "localhost",
+  user: "root",
+  password: "",
+  database: "dromtorp"
+});
+
+con.connect(function(err) {
+  if (err) throw err;
+  console.log("Connected!");
+  var sql = "INSERT INTO `elev` (`ElevID`, `Fornavn`, `Etternavn`, `programfag`, `Hobby`, `Kjonn`, `data`) VALUES (NULL, 'test', 'test', '3', 'test', 'test', '1')";
+  var sql = "UPDATE `elev` SET Etternavn = testson WHERE Fornavn = 'test'";
+  var sql = "DELETE FROM `elev` WHERE Fornavn = 'test'";
+  con.query(sql, function (err, result) {
+    if (err) throw err;
+    console.log("1 record inserted then edited then deleted");
+  });
+});
+```
+
+det funker...
